--- a/page_analyzer/templates/view_url.html
+++ b/page_analyzer/templates/view_url.html
@@ -33,7 +33,35 @@
                 <td>{{ url.created_at }}</td>
             </tr>
         </table>
-        <a href="{{ url_for('list_urls') }}" class="btn btn-primary">Назад к списку</a>
+        <h2>Проверки</h2>
+         <form action="{{ url_for('check_url', id=url.id) }}" method="post">
+             <button class="btn btn-primary" type="submit">Запустить проверку</button>
+         </form>
+         <table class="table table-bordered mt-3" data-test="checks">
+             <thead>
+                 <tr>
+                     <th>ID</th>
+                     <th>Код ответа</th>
+                     <th>h1</th>
+                     <th>title</th>
+                     <th>description</th>
+                     <th>Дата создания</th>
+                 </tr>
+             </thead>
+             <tbody>
+                 {% for check in checks %}
+                     <tr>
+                         <td>{{ check.id }}</td>
+                         <td>{{ check.status_code }}</td>
+                         <td>{{ check.h1 }}</td>
+                         <td>{{ check.title }}</td>
+                         <td>{{ check.description }}</td>
+                         <td>{{ check.created_at }}</td>
+                     </tr>
+                 {% endfor %}
+             </tbody>
+         </table>
+         <a href="{{ url_for('list_urls') }}" class="btn btn-primary">Назад к списку</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
