--- a/page_analyzer/templates/list_urls.html
+++ b/page_analyzer/templates/list_urls.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
     <div class="container mt-5">
-        <h1>Добавленные URL</h1>
+        <h1>Сайты</h1>
         <div class="mt-3">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
