--- a/page_analyzer/templates/view_url.html
+++ b/page_analyzer/templates/view_url.html
@@ -19,6 +19,17 @@
     </nav>
     <div class="container mt-5">
         <h1>Сайт: {{ url.name }}</h1>
+        <div class="mt-3">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </div>
         <table class="table table-bordered" data-test="url">
             <tr>
                 <th>ID</th>
