--- a/page_analyzer/templates/view_url.html
+++ b/page_analyzer/templates/view_url.html
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <th>Дата создания</th>
-                <td>{{ url.created_at }}</td>
+                <td>{{ url.created_at.strftime('%Y-%m-%d') }}</td>
             </tr>
         </table>
         <h2>Проверки</h2>
@@ -67,7 +67,7 @@
                          <td>{{ check.h1 }}</td>
                          <td>{{ check.title }}</td>
                          <td>{{ check.description }}</td>
-                         <td>{{ check.created_at }}</td>
+                         <td>{{ check.created_at.strftime('%Y-%m-%d') }}</td>
                      </tr>
                  {% endfor %}
              </tbody>
