--- a/page_analyzer/templates/view_url.html
+++ b/page_analyzer/templates/view_url.html
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                 <th>Дата создания</th>
-                <td>{{ url.created_at }}</td>
+                <td>{{ url.created_at|datetime }}</td>
             </tr>
         </table>
         <h2>Проверки</h2>
