--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Analyzer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container text-center mt-5">
-        <h1>Анализатор страниц</h1>
-        <p>Бесплатно проверяйте сайты на SEO-пригодность</p>
-        <form class="d-flex justify-content-center" action="{{ url_for('list_urls') }}" method="post">
-            <input type="text" class="form-control w-50 me-2" name="url" placeholder="https://www.example.com">
-            <button class="btn btn-primary" type="submit">Проверить</button>
-        </form>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-crossorigin="anonymous"></script>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Анализатор страниц{% endblock %}
+
+{% block content %}
+<div class="container text-center mt-5">
+    <h1>Анализатор страниц</h1>
+    <p>Бесплатно проверяйте сайты на SEO-пригодность</p>
+    <form class="d-flex justify-content-center" action="{{ url_for('list_urls') }}" method="post">
+        <input type="text" class="form-control w-50 me-2" name="url" placeholder="https://www.example.com">
+        <button class="btn btn-primary" type="submit">Проверить</button>
+    </form>
+</div>
+{% endblock %}
