--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -7,8 +7,8 @@
     <h1>Анализатор страниц</h1>
     <p>Бесплатно проверяйте сайты на SEO-пригодность</p>
     <form class="d-flex justify-content-center" action="{{ url_for('list_urls') }}" method="post">
-        <input type="text" class="form-control w-50 me-2" name="url" placeholder="https://www.example.com">
-        <button class="btn btn-primary" type="submit">Проверить</button>
+        <input type="text" class="form-control w-50 me-2" name="url" placeholder="https://www.example.com" data-test="url-input">
+        <button class="btn btn-primary" type="submit" data-test="submit-button">Проверить</button>
     </form>
 </div>
 {% endblock %}
