--- a/page_analyzer/templates/base.html
+++ b/page_analyzer/templates/base.html
@@ -20,6 +20,7 @@
     <div class="container mt-3">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
+                <p>Отладка: {{ messages }}</p>
                 {% for category, message in messages %}
                     <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
                         {{ message }}
