--- a/page_analyzer/templates/list_urls.html
+++ b/page_analyzer/templates/list_urls.html
@@ -17,7 +17,7 @@
         {% for url in urls %}
             <tr>
                 <td>{{ url.id }}</td>
-                <td><a href="{{ url_for('view_url', id=url.id) }}">{{ url.name }}</a></td>
+                <td><a href="{{ url_for('url_details', id=url.id) }}">{{ url.name }}</a></td>
                 <td>{{ url.last_check_date|datetime }}</td>
                 <td>{{ url.status_code }}</td>
             </tr>
