--- a/page_analyzer/templates/base.html
+++ b/page_analyzer/templates/base.html
@@ -12,7 +12,7 @@
             <a class="navbar-brand" href="/">Анализатор страниц</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('list_urls') }}">Сайты</a>
+                    <a class="nav-link" href="{{ url_for('show_urls_page') }}">Сайты</a>
                 </li>
             </ul>
         </div>
