--- a/page_analyzer/templates/list_urls.html
+++ b/page_analyzer/templates/list_urls.html
@@ -17,9 +17,9 @@
         {% for url in urls %}
             <tr>
                 <td>{{ url.id }}</td>
-                <td><a href="{{ url_for('url_details', id=url.id) }}">{{ url.name }}</a></td>
+                <td><a href="{{ url_for('show_url_page', url_id=url.id) }}">{{ url.name }}</a></td>
                 <td>{{ url.last_check_date.strftime('%Y-%m-%d %H:%M:%S') if url.last_check_date else 'Н/Д' }}</td>
-                <td>{{ url.status_code }}</td>
+                <td>{{ url.last_status_code or 'Н/Д' }}</td>
             </tr>
         {% endfor %}
     </tbody>
